--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" style="background-color: #979a9c;">
+<header class="site-header" style="background-color:black;">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
