--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer h-card" style="background-color: #979a9c;">
+<footer class="site-footer h-card" style="background-color: black;">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
