UNSOED Dan PT. PLN Indonesia Power Jateng 2 Adipala Jajaki Kerja Sama

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
             {%- if my_page.title -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}" style="color: white;">{{ my_page.title | escape }}</a>
             {%- endif -%}
-          {%- endfor -%}
+          {%- endfor -%}ci
         </div>
       </nav>
     {%- endif -%}
