--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -20,6 +20,7 @@ dl, dd, ol, ul, figure {
  */
 body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+  text-align: justify;
   color: $text-color;
   background-color: $background-color;
   -webkit-text-size-adjust: 100%;
